package AP;

message Connect
{
	required string userid = 1;
	required string password = 2;
}

message ConnectAck
{
	required bool	success = 1;
	required string session = 2;
}

message Request
{	
	required string session = 1;
	required string method = 2;
	required string param_data = 3;
}

message Response
{
	required string method = 1;
	required string return_data = 2;
}

message CallbackReq
{
	required string method = 1;
	required string param_data = 2;
}

message CallbackRsp
{
	required string session = 1;
	required string method = 2;
	required string return_data = 3;
}